[build-system]
requires = [
    "hatchling>=1.3.1",
    "hatch-jupyter-builder",
    "jupyterlab>=4,<5",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_miami_nights"
description = "A glowing 80s theme based on Synthwave '84 and  JupyterLab's Neon Night theme by yeebc"
version = "0.4.2"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "the jupyterlab_miami_nights authors" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "jupyterlab>=4,<5",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "hatch-jupyter-builder",
    "hatchling",
    "ruff",
    "pytest",
    "pytest-cov",
    "twine",
    "wheel",
]

[project.urls]
Repository = "https://github.com/timkpaine/jupyterlab_miami_nights"
Homepage = "https://github.com/timkpaine/jupyterlab_miami_nights"

[tool.bumpversion]
current_version = "0.4.2"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "jupyterlab_miami_nights/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.check-manifest]
ignore = [
	"jupyterlab_miami_nights/labextension/**",
	"js/**"
]

[tool.hatch.build]
artifacts = [
    "jupyterlab_miami_nights/labextension"
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_miami_nights/labextension" = "share/jupyter/labextensions/@timkpaine/jupyterlab_miami_nights"
"jupyterlab_miami_nights/extension/install.json" = "share/jupyter/labextensions/@timkpaine/jupyterlab_miami_nights/install.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "screebshots",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_miami_nights/labextension/package.json",
]
skip-if-exists = [
    "jupyterlab_miami_nights/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build"
npm = "pnpm"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["jupyterlab_miami_nights"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
