[build-system]
requires = ["hatchling", "hatch-js", "jupyterlab>=4,<5"]
build-backend="hatchling.build"

[project]
name = "jupyterlab-miami-nights"
description = "A glowing 80s theme based on Synthwave '84 and  JupyterLab's Neon Night theme by yeebc"
authors = [{name = "the jupyterlab miami nights authors", email = "t.paine154@gmail.com"}]
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.4.3"
requires-python = ">=3.10"
keywords = [
    "Jupyter",
    "JupyterLab",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "jupyterlab>=4,<5",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "codespell>=2.4,<2.5",
    "hatch-js",
    "hatchling",
    "mdformat>=0.7.22,<1.1",
    "mdformat-tables>=1",
    "jupyterlab>=4,<5",
    "pytest",
    "pytest-cov",
    "ruff>=0.9,<0.15",
    "twine",
    "wheel",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/timkpaine/jupyterlab_miami_nights"
Homepage = "https://github.com/timkpaine/jupyterlab_miami_nights"

[tool.bumpversion]
current_version = "0.4.3"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "jupyterlab_miami_nights/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yaml",
    "js/pnpm-lock.yaml",
    "Makefile",
    ".vscode/*",
    "jupyterlab_miami_nights/extension/**",
    "jupyterlab_miami_nights/labextension/**",
    "docs/**/*",
    "js/dist/**/*",
    "js/lib/*",
]

[tool.coverage.run]
branch = true
omit = [
    "jupyterlab_miami_nights/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "jupyterlab_miami_nights/labextension",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = [
    "jupyterlab_miami_nights",
    "js"
]
exclude = [
    "/js/dist",
    "/js/node_modules",
]

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_miami_nights"]
exclude = [
    "/js"
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_miami_nights/labextension" = "share/jupyter/labextensions/jupyterlab-miami-nights"
"jupyterlab_miami_nights/extension/install.json" = "share/jupyter/labextensions/jupyterlab-miami-nights/install.json"

[tool.hatch.build.hooks.hatch-js]
path = "js"
build_cmd = "build"
tool = "pnpm"
targets = [
    "jupyterlab_miami_nights/labextension/package.json",
]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
testpaths = "jupyterlab_miami_nights/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["jupyterlab_miami_nights"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
